[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.metadata]
allow-direct-references = true
# [build-system]
# requires = ["setuptools >= 61.0"]
# build-backend = "setuptools.build_meta"
# [build-system]
# requires = ["pdm-backend"]
# build-backend = "pdm.backend"

[project]
name = 'ard'
version = '0.0.1'
requires-python = '>=3.13'
dependencies = [
    'icecream',
    'numpy',
    'rich',
    'pygame',
]

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '-m "not ci" --disable-warnings --doctest-continue-on-failure'

testpaths = [
    'ard/tests',
]

[tool.yapf]
based_on_style = 'pep8'
indent_width = 4
column_limit = 111
blank_line_before_nested_class_or_def = true
blank_lines_around_top_level_definition = 1
arithmetic_precedence_indication = true

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
venvPath = "/home/sheffler/sw/MambaForge/envs"
venv = "rfdsym312"
include = ['ipd']
exclude = [
    # 'ipd/crud/*',
    # 'ipd/fit/*',
    # 'ipd/homog/*',
    # 'ipd/pdb/*',
    # 'ipd/voxel/*',
    # 'ipd/samp/*',
    # 'ipd/sym/old/*',
    # 'ipd/sym/xtal/*',
    # 'ipd/tests/*',
    # 'ipd/viz/*',
    # '*_viz.py',
    '**/*.log',
    '**/__pycache__',
]
threads = 12
defineConstant = { DEBUG = true }
# typeCheckingMode = 'basic'
typeCheckingMode = 'standard'
reportMissingImports = false
reportMissingTypeStubs = false

executionEnvironments = [
  { root = 'ipd' }
]

[tool.ruff]
lint.ignore = [
   'E731', #  [ ] Do not assign a `lambda` expression, use a `def`
   'E402', #  [ ] Module level import not at top of file
   'E741', #  [ ] Ambiguous variable name: `I`
   'E701', #  [ ] Multiple statements on one line (colon)
   'F403', #  [ ] `from Attention_module import *` used; unable to detect undefined names
   'F405',
   'F821',
   'F841',

]
lint.dummy-variable-rgx = '^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|ic)$'
line-length = 123
target-version = 'py39'
format.quote-style = 'single'
format.indent-style = 'space'
format.docstring-code-format = true
